<resources>
    <string name="app_name">EighteenAndroid</string>
    <string name="menu_main">Main</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_teen">TEEN</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">My</string>
    <string name="main_today_teen">오늘의 인기 Teen</string>
    <string name="tag_exercise">운동</string>
    <string name="tag_beauty">외모</string>
    <string name="login">로그인</string>
    <string name="korea">대한민국</string>
    <string name="terms_of_service">서비스 약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="confirm">확인</string>
    <string name="add_external_link">외부 링크 추가</string>
    <string name="remove">삭제</string>
    <string name="mbti_extroversion">외향형</string>
    <string name="mbti_introversion">내향형</string>
    <string name="mbti_sensing">감각형</string>
    <string name="mbti_intuition">직관형</string>
    <string name="mbti_thinking">사고형</string>
    <string name="mbti_feeling">감정형</string>
    <string name="mbti_judging">판단형 (체계적)</string>
    <string name="mbti_perceiving">인식형 (융통성)</string>
    <string name="completed">완료</string>
    <string name="pass">건너뛰기</string>
    <string name="view_expand">펼쳐서 보기</string>
    <string name="fold">접기</string>
    <string name="exit">나가기</string>
    <string name="no">아니요</string>
    <string name="yes">네</string>
    <string name="send">보내기</string>
    <string name="ok_like">좋아요!</string>
    <string name="nickname_error_wrong_input">한글/영어/숫자만 입력하실 수 있습니다.</string>
    <string name="nickname_error_length">2~8자리만 입력하실 수 있습니다.</string>
    <string name="representative_image">대표 사진</string>
    <string name="required_login_title">로그인이 필요한 서비스입니다.</string>
    <string name="required_login_content">로그인 하시겠습니까?</string>
    <string name="error_common_title">앗 오류가 발생했어요!</string>
    <string name="error_common_content">인터넷 연결 확인 후 다시 시도해주세요.</string>
    <string name="error_network">네트워크 상태가 좋지 않습니다.\n잠시 후 다시 시도해주세요</string>
    <string name="retry">재시도</string>
    <string name="permission_denied">권한 요청이 거부되었습니다.</string>
    <string name="sign_out">로그아웃</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="sign_up_login_title">가입하기</string>
    <string name="sign_up_login_tip">프로필을 만들어 나의 사진을 자랑하고\nTEEN에서 경쟁해보세요</string>
    <string name="sign_up_login_with_phone_number">전화번호로 회원가입</string>
    <string name="sign_up_login_notice_agreed">대한민국에서 위치한 계정으로 계속하면\n당사의 서비스 약관의 동의하고\n개인정보 처리방침을 읽었음을 인정하는 것입니다.</string>
    <string name="sign_up_login_check_has_account">이미 계정이 있으신가요?</string>
    <string name="sign_up_next">다음으로</string>
    <string name="sign_up_pass">건너뛰기</string>
    <string name="sign_up_start">시작하기</string>
    <string name="sign_up_enter_phone_number_title">번호를 입력해주세요</string>
    <string name="sign_up_enter_phone_number_get_auth_code">인증 코드 받기</string>
    <string name="sign_up_enter_auth_code_title">6자리 코드 입력</string>
    <string name="sign_up_enter_auth_code_resend_tip">코드를 받지 못하셨나요? 다시 전송해보세요!</string>
    <string name="sign_up_enter_auth_code_resend">다시 전송하기</string>
    <string name="sign_up_enter_auth_code_sign_up_dialog_title">인증이 완료되었어요!</string>
    <string name="sign_up_enter_auth_code_sign_up_dialog_content">A-TEEN에 정보를 입력하여\n가입을 마저 완료해보세요.</string>
    <string name="sign_up_enter_auth_code_login_dialog_title">이미 가입된 사용자에요!</string>
    <string name="sign_up_enter_auth_code_login_dialog_content">바로 로그인 할까요?</string>
    <string name="sign_up_terms_of_service_title">사용 약관</string>
    <string name="sign_up_terms_of_service_agree_all">모두 동의</string>
    <string name="sign_up_terms_of_service_agree_terms_of_service">서비스 약관에 동의 (필수)</string>
    <string name="sign_up_terms_of_service_agree_privacy_policy">개인 정보 수집 및 사용에 동의 (필수)</string>
    <string name="sign_up_terms_of_service_agree_notification">인기 콘텐츠 및 알림 수신 동의 (선택)</string>
    <string name="sign_up_terms_of_service_agree_notification_description">A-TEEN에서 인기 콘텐츠 및 프로모션에 대한 알림을 받습니다. 언제든지 설정을 검토하고 편집할 수 있습니다. 동의를 하지 않아도 A-TEEN 서비스 사용이 제한되지 않습니다.</string>
    <string name="sign_up_terms_of_service_see_detail">세부 정보 보기</string>
    <string name="sign_up_enter_id_title">반가워요! :)\n사용하실 아이디를 입력해주세요</string>
    <string name="sign_up_enter_id_error_wrong_input">소문자 알파벳 또는 숫자만 입력하실 수 있습니다.</string>
    <string name="sign_up_enter_id_error_length">4~11자리만 입력하실 수 있습니다.</string>
    <string name="sign_up_enter_id_tip">소문자 알파벳 또는 숫자 (4~11자리)\n아이디는 이후에 변경할 수 없습니다.</string>
    <string name="sign_up_enter_id_error_duplicated">중복된 아이디 입니다.</string>
    <string name="sign_up_enter_nickname_title">A-TEEN에서 쓰일\n이름 혹은 닉네임을 알려주세요</string>
    <string name="sign_up_enter_nickname_tip">특수문자를 제외한 한글/영어/숫자 (2~8자리)\n* 추후 언제든 수정 가능합니다.</string>
    <string name="sign_up_enter_birth_title">당신의\n생년월일을 알려주세요!</string>
    <string name="sign_up_enter_birth_select_birth">태어난 날을 선택해주세요</string>
    <string name="sign_up_enter_birth_see_terms_of_service">서비스 약관 바로 보기</string>
    <string name="sign_up_enter_school_title">다니고 있는\n학교를 알려주세요</string>
    <string name="sign_up_select_tag_title">TEEN에서 자랑할 나만의\n카테고리를 골라주세요!</string>
    <string name="sign_up_select_tag_hint">하나의 카테고리를 선택할 수 있어요!</string>
    <string name="sign_up_add_media_title">%s 카테고리에서 자랑할\n사진이나 동영상을 추가해보세요</string>
    <string name="sign_up_add_media_hint">*최대 2개를 등록할 수 있어요</string>
    <string name="sign_up_add_media_guide">사진 가이드를 참고해주세요</string>
    <string name="sign_up_completed_title">등록이 완료되었어요!\n이제 A-TEEN을 시작해보세요 :)</string>
    <string name="edit_media_crop_image_complete">등록 완료</string>
    <string name="main_about_teen">About A-Teen</string>
    <string name="about_teen_title">Teen</string>
    <string name="about_teen_detail">친구들의 프로필을\n투표해보세요!</string>
    <string name="about_teen_tournament_title">토너먼트</string>
    <string name="about_teen_tournament_detail">투표 결과를\n한 눈에 볼 수 있어요!</string>
    <string name="about_teen_chat_title">채팅</string>
    <string name="about_teen_chat_detail">채팅을 통해 친구들과\n소통해보세요!</string>
    <string name="about_teen_my_teen_title">나만의 틴</string>
    <string name="about_teen_my_teen_detail">나만의 프로필을\n등록해보세요!</string>
    <string name="main_tournament_in_progress">진행 중인 토너먼트</string>
    <string name="more">더보기</string>
    <string name="main_another_teen">또 다른 Teen 살펴보기</string>
    <string name="report_title">신고하기</string>
    <string name="block_title">차단하기</string>
    <string name="report_content_title">신고 사유</string>
    <string name="report_content_reason_1">폭력성 또는 선정적인 프로필</string>
    <string name="report_content_reason_2">광고 게시물 또는 프로필</string>
    <string name="report_content_reason_3">타인을 사칭한 프로필</string>
    <string name="report_content_reason_4">기타</string>
    <string name="report_content_block_profile">해당 프로필 다시는 보지 않기</string>
    <string name="report_content_caution">신고는 반대 의견을 표시하는 기능이 아닙니다.</string>
    <string name="report_completed_title">신고가 완료되었습니다.</string>
    <string name="report_completed_content">해당 프로필은\n더이상 표시되지 않아요</string>
    <string name="report_completed_button_title">알겠어요!</string>
    <string name="my_profile_title">내 프로필</string>
    <string name="my_profile_have_a_nice_day">%s 님\n오늘도 좋은 하루 보내세요!</string>
    <string name="my_profile_edit_image">사진 수정</string>
    <string name="my_profile_edit_nickname">닉네임 수정</string>
    <string name="my_profile_age">%d세</string>
    <string name="my_profile_badge">배지</string>
    <string name="my_profile_badge_count">%d개</string>
    <string name="my_profile_teen">TEEN</string>
    <string name="my_profile_complete">수정 완료</string>
    <string name="my_profile_my_link">내 링크</string>
    <string name="my_profile_my_link_empty">등록된 링크가 없습니다.</string>
    <string name="my_profile_add_link_url_hint">http://example.com</string>
    <string name="my_profile_add_link_name_hint">제목</string>
    <string name="my_profile_introduce_myself">자기 소개</string>
    <string name="my_profile_introduce_empty">등록된 소개글이 없습니다.</string>
    <string name="my_profile_edit_introduce_title">자기소개 정보 수정</string>
    <string name="my_profile_edit_introduce_mbti_description">당신의 mbti가 무엇인가요?</string>
    <string name="my_profile_edit_introduce_description_description">당신에 대한 소개 글을 적어주세요.</string>
    <string name="my_profile_edit_introduce_description_hint">간단한 자기 소개글을 작성해주세요\nex) 저의 취미는 운동이에요</string>
    <string name="my_profile_ten_of_qna">10문 10답</string>
    <string name="my_profile_ten_of_qna_empty">등록된 문답이 없습니다.</string>
    <string name="my_profile_edit_ten_of_qna_title">10문 10답 정보 수정</string>
    <string name="my_profile_edit_ten_of_qna_description">나를 소개할 수 있는\n질문을 선택해서 답해주세요 :)</string>
    <string name="my_profile_edit_ten_of_qna_min_count">*최소 3개</string>
    <string name="my_profile_edit_ten_of_qna_save">저장 하기</string>
    <string name="my_profile_edit_ten_of_qna_add">질문 추가하기</string>
    <string name="my_profile_edit_ten_of_qna_answer_hint">질문에 대한 답을 입력해주세요.</string>
    <string name="my_profile_edit_ten_of_qna_select_title">마음에 드는 질문을 선택해주세요</string>
    <string name="my_profile_edit_nickname_title">닉네임 수정</string>
    <string name="my_profile_edit_media_title">사진 수정</string>
    <string name="my_profile_edit_media_guide">*사진, 동영상 포함 최대 10장을 등록할 수 있어요</string>
    <string name="my_profile_setting_title">설정</string>
    <string name="my_profile_setting_managing_info">내 정보 관리</string>
    <string name="my_profile_setting_service_setting_title">서비스 설정</string>
    <string name="my_profile_setting_service_alarm">알림 설정</string>
    <string name="my_profile_setting_service_participate_tournament">대회 참여</string>
    <string name="my_profile_setting_blocked_users">차단된 유저</string>
    <string name="my_profile_setting_video_auto_play">동영상 자동 재생</string>
    <string name="my_profile_setting_info_title">정보</string>
    <string name="my_profile_setting_info_app_version">앱 버전</string>
    <string name="my_profile_setting_info_app_update">업데이트 하기</string>
    <string name="my_profile_setting_customer_service">고객센터</string>
    <string name="my_profile_setting_managing_info_title">내 정보 관리</string>
    <string name="my_profile_setting_managing_info_dialog_reject">다음에</string>
    <string name="my_profile_setting_managing_info_sign_out_dialog_title">로그아웃 하시겠습니까?</string>
    <string name="my_profile_setting_managing_info_delete_user_dialog_title">탈퇴하시면 90일 간 가입이 불가능해요!</string>
    <string name="my_profile_setting_managing_info_delete_user_dialog_content">탈퇴한 계정 아이디는 복구가 불가능합니다.\n그래도 탈퇴하시겠습니까?</string>
    <string name="time_min_sec">"%02d:%02d"</string>
    <string name="profile_detail_see_more">펼쳐서 보기</string>
    <string name="profile_detail_qna_title">10문 10답</string>
    <string name="profile_detail_question">Lorem ipsum dolor sit amet?</string>
    <string name="profile_detail_answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="profile_detail_introduction_title">자기 소개</string>
    <string name="profile_detail_introduction_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="profile_detail_personality_type">INTP</string>
    <string name="profile_detail_id">id name</string>
    <string name="profile_detail_name">김 에스더</string>
    <string name="profile_detail_school">서울 중학교, </string>
    <string name="profile_detail_age">18세</string>
    <string name="profile_detail_like_count">11</string>
    <string name="profile_detail_badge">배지</string>
    <string name="profile_detail_badge_count">10개</string>
    <string name="profile_detail_teen">TEEN</string>
    <string name="profile_detail_teen_award">5월 2주차 우승</string>
    <string name="profile_detail_like">좋아요</string>
    <string name="chat_search_friend">친구를 검색해보세요</string>
    <string name="chat_empty_message">아직 도착한\n메시지가 없어요!</string>
    <string name="chat_exit_dialog_title">채팅방에서 나가시겠습니까?</string>
</resources>