<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btn_bottom_main"
        android:enabled="true"
        android:icon="@drawable/menu_home_selected"
        android:title="@string/menu_main" />

    <item
        android:id="@+id/btn_bottom_ranking"
        android:enabled="true"
        android:icon="@drawable/menu_ranking_selected"
        android:title="@string/menu_ranking" />

    <item
        android:id="@+id/btn_bottom_chat"
        android:enabled="true"
        android:icon="@drawable/menu_chat_selected"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/btn_bottom_profile"
        android:enabled="true"
        android:icon="@drawable/menu_profile_selected"
        android:title="@string/menu_profile" />
</menu>