<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_rounded_dialog">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_completed_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/report_completed_content"
            android:textColor="@color/grey_02"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_report_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_rounded_btn"
            android:text="@string/report_completed_button_title"/>
    </LinearLayout>
</FrameLayout>