<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/tv_intro_label"
        style="@style/pretendard_bold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="7dp"
        android:text="@string/profile_detail_introduction_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_personality_type"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        app:chipCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_label"
        tools:text="@string/profile_detail_personality_type" />

    <TextView
        android:id="@+id/tv_introduction"
        style="@style/pretendard_regular_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:lineSpacingMultiplier="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_personality_type"
        tools:text="@string/profile_detail_introduction_des" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginTop="40dp"
        android:background="@color/white_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_introduction" />

</androidx.constraintlayout.widget.ConstraintLayout>