<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/ivBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/pretendard_bold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/my_profile_edit_nickname_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBtnBack" />

    <EditText
        android:id="@+id/etInput"
        style="@style/TextField"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:saveEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvCount"
        style="@style/pretendard_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/etInput"
        app:layout_constraintStart_toEndOf="@id/etInput"
        app:layout_constraintTop_toTopOf="@id/etInput"
        tools:text="0/8" />

    <TextView
        android:id="@+id/tvErrorMessage"
        style="@style/pretendard_regular_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/etInput"
        app:layout_constraintTop_toBottomOf="@id/etInput"
        tools:text="@string/nickname_error_length" />

    <TextView
        android:id="@+id/tvTip"
        style="@style/pretendard_regular_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up_enter_nickname_tip"
        android:textColor="@color/grey_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"
        app:layout_goneMarginTop="10dp" />

    <TextView
        android:id="@+id/tvBtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_btn_selector"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="13dp"
        android:text="@string/my_profile_complete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>